; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm64/rockchip/extr_rk_gpio.c_rk_gpio_pin_getflags.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm64/rockchip/extr_rk_gpio.c_rk_gpio_pin_getflags.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rk_gpio_softc = type { i32 }

@RK_GPIO_SWPORTA_DDR = common dso_local global i32 0, align 4
@GPIO_PIN_OUTPUT = common dso_local global i32 0, align 4
@GPIO_PIN_INPUT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32*)* @rk_gpio_pin_getflags to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rk_gpio_pin_getflags(i32 %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca %struct.rk_gpio_softc*, align 8
  %8 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32* %2, i32** %6, align 8
  %9 = load i32, i32* %4, align 4
  %10 = call %struct.rk_gpio_softc* @device_get_softc(i32 %9)
  store %struct.rk_gpio_softc* %10, %struct.rk_gpio_softc** %7, align 8
  %11 = load %struct.rk_gpio_softc*, %struct.rk_gpio_softc** %7, align 8
  %12 = call i32 @RK_GPIO_LOCK(%struct.rk_gpio_softc* %11)
  %13 = load %struct.rk_gpio_softc*, %struct.rk_gpio_softc** %7, align 8
  %14 = load i32, i32* @RK_GPIO_SWPORTA_DDR, align 4
  %15 = call i32 @RK_GPIO_READ(%struct.rk_gpio_softc* %13, i32 %14)
  store i32 %15, i32* %8, align 4
  %16 = load %struct.rk_gpio_softc*, %struct.rk_gpio_softc** %7, align 8
  %17 = call i32 @RK_GPIO_UNLOCK(%struct.rk_gpio_softc* %16)
  %18 = load i32, i32* %8, align 4
  %19 = load i32, i32* %5, align 4
  %20 = shl i32 1, %19
  %21 = and i32 %18, %20
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %26

23:                                               ; preds = %3
  %24 = load i32, i32* @GPIO_PIN_OUTPUT, align 4
  %25 = load i32*, i32** %6, align 8
  store i32 %24, i32* %25, align 4
  br label %29

26:                                               ; preds = %3
  %27 = load i32, i32* @GPIO_PIN_INPUT, align 4
  %28 = load i32*, i32** %6, align 8
  store i32 %27, i32* %28, align 4
  br label %29

29:                                               ; preds = %26, %23
  ret i32 0
}

declare dso_local %struct.rk_gpio_softc* @device_get_softc(i32) #1

declare dso_local i32 @RK_GPIO_LOCK(%struct.rk_gpio_softc*) #1

declare dso_local i32 @RK_GPIO_READ(%struct.rk_gpio_softc*, i32) #1

declare dso_local i32 @RK_GPIO_UNLOCK(%struct.rk_gpio_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
